--- a/bower.json
+++ b/bower.json
@@ -25,9 +25,10 @@
     "tests"
   ],
   "dependencies": {
+    "polymer": "Polymer/polymer#^2.0.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
-    "iron-icons": "PolymerElements/iron-icons#^2.0.0",
-    "polymer": "Polymer/polymer#^2.0.0"
+    "iron-icon": "PolymerElements/iron-icon#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.0"
   },
   "devDependencies": {
     "webcomponentsjs": "^1.0.0",
